--- a/reservations/templates/reservations/accueil.html
+++ b/reservations/templates/reservations/accueil.html
@@ -1,26 +1,37 @@
+{% extends 'base.html' %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Jeux Olympiques</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-</head>
-<body>
-    <div class="container text-center mt-5">
-        <!-- Ajout du logo -->
-        <img src="{% static 'images/Logo.svg' %}" alt="Logo Jeux Olympiques" class="mb-4" style="max-width: 200px;">
-        
-        <h1>Bienvenue sur le site des Jeux Olympiques</h1>
-        <p class="lead">Réservez vos billets et découvrez les épreuves des Jeux Olympiques 2024 !</p>
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <a href="{% url 'liste_offres' %}" class="btn btn-primary btn-lg">Voir les offres</a>
-            <a href="{% url 'voir_panier' %}" class="btn btn-secondary btn-lg">Votre panier</a>
-            <a href="{% url 'inscription' %}" class="btn btn-success btn-lg">Créer un compte</a>
-            <a href="{% url 'login' %}" class="btn btn-info btn-lg">Se connecter</a>
-        </div>
+
+{% block title %}Accueil - Jeux Olympiques{% endblock %}
+
+{% block content %}
+<div class="text-center mt-5">
+    <!-- Logo des Jeux Olympiques -->
+    <img src="{% static 'images/Logo.svg' %}" alt="Logo Jeux Olympiques" class="mb-4" style="max-width: 200px;">
+    
+    <!-- Titre principal et description -->
+    <h1>Bienvenue sur le site des Jeux Olympiques de Paris 2024</h1>
+    <p class="lead">
+        Vous êtes sur le site officiel des Jeux Olympiques de Paris 2024. Ici, vous pouvez réserver vos billets pour assister aux différentes épreuves, découvrir les moments forts de l'événement, et explorer le calendrier des compétitions. Préparez-vous à vivre une expérience sportive unique et inoubliable au cœur de la capitale française !
+    </p>
+    
+    <!-- Image illustrant Paris -->
+    <img src="{% static 'images/paris.jpg' %}" alt="Paris" class="mb-4" style="max-width: 100%; height: auto;">
+    
+    <!-- Section du calendrier des épreuves -->
+    <h2>Calendrier des Épreuves</h2>
+    <ul class="list-group list-group-flush text-start mt-3">
+        <li class="list-group-item"><strong>100 m Hommes :</strong> 3 juillet à 10h</li>
+        <li class="list-group-item"><strong>100 m Femmes :</strong> 4 juillet à 20h</li>
+        <li class="list-group-item"><strong>Marathon :</strong> 5 juillet à 16h</li>
+        <li class="list-group-item"><strong>Natation Femmes :</strong> 6 juillet à 11h</li>
+        <li class="list-group-item"><strong>Football Hommes :</strong> 7 juillet à 21h</li>
+    </ul>
+    
+    <!-- Boutons de navigation -->
+    <div class="d-grid gap-2 col-6 mx-auto mt-4">
+        <a href="{% url 'liste_offres' %}" class="btn btn-primary btn-lg">Voir les offres</a>
+        <a href="{% url 'voir_panier' %}" class="btn btn-secondary btn-lg">Votre panier</a>
     </div>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
-</html>
+</div>
+{% endblock %}
